--- a/program/image-classification-tflite-loadgen/user.conf
+++ b/program/image-classification-tflite-loadgen/user.conf
@@ -3,6 +3,9 @@
 # Model maybe '*' as wildcard. In that case the value applies to all models.
 # All times are in milli seconds
 
+*.SingleStream.qsl_rng_seed = 3133965575612453542
+*.SingleStream.sample_index_rng_seed = 41592772053807303
+*.SingleStream.schedule_rng_seed = 3622009729038561421
 *.SingleStream.target_latency = 10
 *.SingleStream.target_latency_percentile = 90
 *.SingleStream.min_duration = 60000
@@ -13,6 +16,9 @@ ssd-mobilenet.SingleStream.performance_sample_count_override = 256
 ssd-resnet34.SingleStream.performance_sample_count_override = 64
 gnmt.SingleStream.performance_sample_count_override = 3903900
 
+*.MultiStream.qsl_rng_seed = 3133965575612453542
+*.MultiStream.sample_index_rng_seed = 41592772053807303
+*.MultiStream.schedule_rng_seed = 3622009729038561421
 *.MultiStream.target_qps = 20
 *.MultiStream.target_latency_percentile = 99
 *.MultiStream.samples_per_query = 4
@@ -32,6 +38,9 @@ ssd-mobilenet.MultiStream.performance_sample_count_override = 256
 ssd-resnet34.MultiStream.performance_sample_count_override = 64
 gnmt.MultiStream.performance_sample_count_override = 3903900
 
+*.Server.qsl_rng_seed = 3133965575612453542
+*.Server.sample_index_rng_seed = 41592772053807303
+*.Server.schedule_rng_seed = 3622009729038561421
 *.Server.target_qps = 1.0
 *.Server.target_latency = 10
 *.Server.target_latency_percentile = 99
@@ -49,6 +58,9 @@ ssd-mobilenet.Server.performance_sample_count_override = 256
 ssd-resnet34.Server.performance_sample_count_override = 64
 gnmt.Server.performance_sample_count_override = 3903900
 
+*.Offline.qsl_rng_seed = 3133965575612453542
+*.Offline.sample_index_rng_seed = 41592772053807303
+*.Offline.schedule_rng_seed = 3622009729038561421
 *.Offline.target_qps = 1.0
 *.Offline.target_latency_percentile = 90
 *.Offline.min_duration = 60000
