--- a/docker/mlperf-inference-vision-with-ck.tensorrt.ubuntu-18.04/Dockerfile
+++ b/docker/mlperf-inference-vision-with-ck.tensorrt.ubuntu-18.04/Dockerfile
@@ -204,11 +204,11 @@ RUN chmod -R g+rwx `ck find program:mlperf-inference-vision`
 # on the first 50 images of the COCO 2017 validation dataset.
 #-----------------------------------------------------------------------------#
 CMD ["ck run program:mlperf-inference-vision --cmd_key=direct \
-    --env.CK_LOADGEN_EXTRA_PARAMS='--count 50' \
-    --env.CK_METRIC_TYPE=COCO \
-    --env.CK_LOADGEN_SCENARIO=SingleStream \
-    --env.CK_LOADGEN_MODE='--accuracy' \
-    --dep_add_tags.weights=ssd,mobilenet-v1,quantized,mlperf,tf \
-    --dep_add_tags.lib-tensorflow=vcpu --env.CUDA_VISIBLE_DEVICES=-1 --env.CK_LOADGEN_BACKEND=tensorflow \
-    --env.CK_LOADGEN_REF_PROFILE=default_tf_object_det_zoo \
-    --skip_print_timers"]
+--env.CK_LOADGEN_EXTRA_PARAMS='--count 50' \
+--env.CK_METRIC_TYPE=COCO \
+--env.CK_LOADGEN_SCENARIO=SingleStream \
+--env.CK_LOADGEN_MODE='--accuracy' \
+--dep_add_tags.weights=ssd,mobilenet-v1,quantized,mlperf,tf \
+--dep_add_tags.lib-tensorflow=vcuda --env.CUDA_VISIBLE_DEVICES=-1 --env.CK_LOADGEN_BACKEND=tensorflow \
+--env.CK_LOADGEN_REF_PROFILE=default_tf_object_det_zoo \
+--skip_print_timers"]
