--- a/docker/mlperf-inference-vision-with-ck.tensorrt.ubuntu-18.04/Dockerfile_20.03-py3_tf-2.1.0
+++ b/docker/mlperf-inference-vision-with-ck.tensorrt.ubuntu-18.04/Dockerfile_20.03-py3_tf-2.1.0
@@ -72,9 +72,9 @@ RUN ${CK_PYTHON} -m pip install --ignore-installed pip setuptools --user
 
 
 #-----------------------------------------------------------------------------#
-# Step 1. Install prebuilt TensorFlow v2.0 (via pip).
+# Step 1. Install prebuilt TensorFlow v2.1 (via pip).
 #-----------------------------------------------------------------------------#
-RUN ck install package --tags=lib,tensorflow,python-package --force_version=2.0.1
+RUN ck install package --tags=lib,tensorflow,python-package --force_version=2.1.0
 #-----------------------------------------------------------------------------#
 
 
@@ -97,15 +97,17 @@ RUN ${CK_PYTHON} -m pip install --user markdown==3.2.1             # >=2.6.8
 RUN ${CK_PYTHON} -m pip install --user numpy==1.18.2               # <2.0,>=1.16.0
 RUN ${CK_PYTHON} -m pip install --user oauthlib==3.1.0             # ?
 RUN ${CK_PYTHON} -m pip install --user opt-einsum==3.2.0           # >=2.3.2
-RUN ${CK_PYTHON} -m pip install --user protobuf==3.6.1             # >=3.6.1
+RUN ${CK_PYTHON} -m pip install --user protobuf==3.11.3            # >=3.8.0
 RUN ${CK_PYTHON} -m pip install --user pyasn1==0.4.8               # <0.5.0,>=0.4.6
 RUN ${CK_PYTHON} -m pip install --user pyasn1-modules==0.2.8       # >=0.2.1
 RUN ${CK_PYTHON} -m pip install --user requests==2.23.0            # <3,>=2.21.0
 RUN ${CK_PYTHON} -m pip install --user requests-oauthlib==1.3.0    # >=0.7.0
 RUN ${CK_PYTHON} -m pip install --user rsa==4.0                    # <4.1,>=3.1.4
+RUN ${CK_PYTHON} -m pip install --user scipy==1.4.1                # ==1.4.1 (exact)
 RUN ${CK_PYTHON} -m pip install --user setuptools==46.1.3          # >=41.0.0
-RUN ${CK_PYTHON} -m pip install --user tensorboard==2.0.2          # <2.1.0,>=2.0.0 (almost exact)
-RUN ${CK_PYTHON} -m pip install --user tensorflow-estimator==2.0.1 # <2.1.0,>=2.0.0 (almost exact)
+RUN ${CK_PYTHON} -m pip install --user six==1.14.0                 # >=1.12.0
+RUN ${CK_PYTHON} -m pip install --user tensorboard==2.1.1          # <2.2.0,>=2.1.0 (almost exact)
+RUN ${CK_PYTHON} -m pip install --user tensorflow-estimator==2.1.0 # <2.2.0,>=2.1.0 (almost exact)
 RUN ${CK_PYTHON} -m pip install --user termcolor==1.1.0            # >=1.1.0
 RUN ${CK_PYTHON} -m pip install --user wheel==0.30.0               # >=0.26
 RUN ${CK_PYTHON} -m pip install --user werkzeug==1.0.1             # >=0.11.15
@@ -117,11 +119,11 @@ RUN ck detect soft:compiler.cuda --full_path=/usr/local/cuda-10.2/bin/nvcc \
  && ck detect soft:lib.cudnn
 # Install TF build dependencies.
 RUN ck install ck-env:package:jdk-8u131-universal
-RUN ck install ck-env:package:tool-bazel-0.26.1-linux
+RUN ck install ck-env:package:tool-bazel-0.27.1-linux
 # Build TF from sources with TensorRT support. Remove the Bazel cache (~16 GB) once done.
 RUN ck pull repo:ck-env
-RUN ck install package --tags=lib,tensorflow,vsrc,vcuda,v2.0.1 \
---env.CK_TF_NEED_TENSORRT=YES --cus.version=2.0.1\
+RUN ck install package --tags=lib,tensorflow,vsrc,vcuda,v2.1.0 \
+--env.CK_TF_NEED_TENSORRT=YES --cus.version=2.1.0\
  && rm -rf ~/.cache/bazel
 #-----------------------------------------------------------------------------#
 
