--- a/docker/object-detection-openvino.ubuntu-18.04/Dockerfile.ubuntu-16.04
+++ b/docker/object-detection-openvino.ubuntu-18.04/Dockerfile.ubuntu-16.04
@@ -10,8 +10,8 @@ ENTRYPOINT ["/bin/bash", "-c"]
 
 # Install known system dependencies and immediately clean up to make the image smaller.
 # CK needs: git, wget, zip.
-# OpenVINO 2019_R3.1 needs CMake >= 3.7.2 but Ubuntu 16.04 provides 3.5.1.
-RUN apt update -y\
+# OpenVINO pre-release needs: CMake >= v3.7.2 but Ubuntu 16.04 provides v3.5.1.
+RUN DEBIAN_FRONTEND=noninteractive apt update -y\
  && apt install -y apt-utils\
  && apt upgrade -y\
  && apt install -y\
@@ -60,12 +60,12 @@ RUN ck pull repo:ck-openvino
 # Use generic Linux settings with dummy frequency setting scripts.
 RUN ck detect platform.os --platform_init_uoa=generic-linux-dummy
 
-# Detect the C/C++ compiler (gcc).
+# Detect C/C++ compiler (gcc).
 RUN ck detect soft:compiler.gcc --full_path=`which ${CK_CC}`
 
-# Install the CMake build tool of the minimum version required by OpenVINO 2019_R3.1.
+# Install the CMake build tool of the minimum version required by OpenVINO pre-release.
 RUN ck install package --tags=cmake,v3.7.2
-
+ 
 # Detect Python.
 RUN ck detect soft --tags=compiler,python --full_path=`which ${CK_PYTHON}`
 # Install the latest Python package installer (pip) and some dependencies.
@@ -73,59 +73,61 @@ RUN ${CK_PYTHON} -m pip install --ignore-installed pip setuptools --user
 
 
 #-----------------------------------------------------------------------------#
-# Step 1. Install the COCO 2017 validation dataset (5,000 images).
+# Step 1. Install Python dependencies (for Model Optimizer and LoadGen).
+#-----------------------------------------------------------------------------#
+# OpenVINO pre-release strictly requires TensorFlow < 2.0 and NetworkX < 2.4.
+RUN ck install package --tags=lib,python-package,tensorflow --force_version=1.15.2
+RUN ck install package --tags=lib,python-package,networkx --force_version=2.3.0
+RUN ck install package --tags=lib,python-package,defusedxml
+# Cython is an implicit dependency of NumPy.
+RUN ck install package --tags=lib,python-package,cython
+RUN ck install package --tags=lib,python-package,numpy
+# test-generator is an implicit dependency of Model Optimizer (not in requirements.txt).
+RUN ck install package --tags=lib,python-package,test-generator
+# Abseil is a LoadGen dependency.
+RUN ck install package --tags=lib,python-package,absl
+
+
+#-----------------------------------------------------------------------------#
+# Step 2. Install C++ dependencies (for Inference Engine and MLPerf program).
+#-----------------------------------------------------------------------------#
+RUN ck install package --tags=channel-stable,opencv,v3.4.3
+RUN ck install package --tags=channel-stable,boost,v1.67.0 --no_tags=min-for-caffe
+# Install LoadGen from a branch reconstructed according to Intel's README.
+RUN ck install package --tags=mlperf,inference,source,dividiti.v0.5-intel
+RUN ck install package --tags=lib,loadgen,static
+#-----------------------------------------------------------------------------#
+
+
+#-----------------------------------------------------------------------------#
+# Step 3. Install the OpenVINO "pre-release" used for MLPerf Inference v0.5.
+#-----------------------------------------------------------------------------#
+RUN ck install package --tags=lib,openvino,pre-release
+RUN ck compile ck-openvino:program:mlperf-inference-v0.5
+#-----------------------------------------------------------------------------#
+
+
+#-----------------------------------------------------------------------------#
+# Step 4. Install the official SSD-MobileNet model for MLPerf Inference v0.5
+# and convert it into the OpenVINO format.
+#-----------------------------------------------------------------------------#
+RUN ck install package --tags=model,tf,ssd-mobilenet,quantized,for.openvino
+RUN ck install package --tags=model,openvino,ssd-mobilenet
+#-----------------------------------------------------------------------------#
+
+
+#-----------------------------------------------------------------------------#
+# Step 5. Install the COCO 2017 validation dataset (5,000 images).
 #-----------------------------------------------------------------------------#
 # Download the dataset to the default path. Remove all training annotations (~765 MB).
 RUN echo | ck install package --tags=object-detection,dataset,coco.2017,val,original,full\
  && ck virtual env --tags=object-detection,dataset,coco.2017,val,original,full --shell_cmd=\
 'rm $CK_ENV_DATASET_COCO_LABELS_DIR/*train2017.json'
 # Install Python COCO API.
-RUN ck install package --tags=lib,python-package,cython
-RUN ck install package --tags=lib,python-package,numpy
+#RUN ck install package --tags=lib,python-package,cython # already installed
+#RUN ck install package --tags=lib,python-package,numpy # already installed
 RUN ck install package --tags=lib,python-package,matplotlib
 RUN ck install package --tags=tool,coco,api
-#-----------------------------------------------------------------------------#
-
-
-#-----------------------------------------------------------------------------#
-# Step 2. Install Python dependencies (for Model Optimizer and LoadGen).
-#-----------------------------------------------------------------------------#
-#RUN ck install package --tags=lib,python-package,numpy # already installed
-# OpenVINO 2019_R3.1 strictly requires TensorFlow < 2.0 and NetworkX < 2.4.
-RUN ck install package --tags=lib,python-package,tensorflow --force_version=1.15.2
-RUN ck install package --tags=lib,python-package,networkx --force_version=2.3.0
-RUN ck install package --tags=lib,python-package,defusedxml
-# Implicit Model Optimizer dependency (not in requirements.txt).
-RUN ck install package --tags=lib,python-package,test-generator
-# LoadGen dependency.
-RUN ck install package --tags=lib,python-package,absl
-
-
-#-----------------------------------------------------------------------------#
-# Step 3. Install C++ dependencies (for Inference Engine and MLPerf program).
-#-----------------------------------------------------------------------------#
-RUN ck install package --tags=channel-stable,opencv,v3.4.3
-RUN ck install package --tags=channel-stable,boost,v1.67.0 --no_tags=min-for-caffe
-# Install LoadGen from the official MLPerf Inference repo.
-RUN ck install package --tags=mlperf,inference,source,upstream.master
-RUN ck install package --tags=lib,loadgen,static
-#-----------------------------------------------------------------------------#
-
-
-#-----------------------------------------------------------------------------#
-# Step 4. Install the OpenVINO 2019_R3.1 release used for MLPerf Inference v0.5.
-#-----------------------------------------------------------------------------#
-RUN ck install package --tags=lib,openvino,2019_R3.1
-RUN ck compile ck-openvino:program:mlperf-inference-v0.5
-#-----------------------------------------------------------------------------#
-
-
-#-----------------------------------------------------------------------------#
-# Step 5. Install the official SSD-MobileNet model for MLPerf Inference v0.5
-# and convert it into the OpenVINO format.
-#-----------------------------------------------------------------------------#
-RUN ck install package --tags=model,tf,ssd-mobilenet,quantized,for.openvino
-RUN ck install package --tags=model,openvino,ssd-mobilenet
 #-----------------------------------------------------------------------------#
 
 
@@ -139,8 +141,12 @@ RUN chmod -R g+rwx `ck find ck-openvino:program:mlperf-inference-v0.5`
 
 #-----------------------------------------------------------------------------#
 # Run the OpenVINO program that Intel prepared for MLPerf Inference v0.5
-# on the CPU with the symmetrically quantized SSD-MobileNet model
-# on a single image of the COCO 2017 validation dataset.
+# with the symmetrically quantized SSD-MobileNet model
+# on the first 50 images of the COCO 2017 validation dataset
+# using all (virtual) CPU cores.
 #-----------------------------------------------------------------------------#
-CMD [ "ck run ck-openvino:program:mlperf-inference-v0.5 --cmd_key=singleinference_ssdm\
- && cat `ck find program:mlperf-inference-v0.5`/tmp/mlperf_log_summary.txt" ]
+CMD ["export NPROCS=`grep -c processor /proc/cpuinfo` \
+ && ck run ck-openvino:program:mlperf-inference-v0.5 --cmd_key=object-detection --skip_print_timers \
+    --env.CK_LOADGEN_SCENARIO=Offline --env.CK_LOADGEN_MODE=Accuracy --env.CK_LOADGEN_DATASET_SIZE=50 \
+    --env.CK_OPENVINO_NTHREADS=$NPROCS --env.CK_OPENVINO_NSTREAMS=$NPROCS --env.CK_OPENVINO_NIREQ=$NPROCS \
+ && cat /home/dvdt/CK_REPOS/ck-openvino/program/mlperf-inference-v0.5/tmp/accuracy.txt"]
